--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -36,4 +36,4 @@ security:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/config, roles: ROLE_SUPER_ADMIN }
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/, roles: ROLE_ADMIN }
+#        - { path: ^/, roles: ROLE_ADMIN }
