--- a/app/config/parameters_prod.yml
+++ b/app/config/parameters_prod.yml
@@ -5,7 +5,7 @@ parameters:
     database_port: null
     database_name: dzqoqnoa_cms
     database_user: dzqoqnoa_cms
-    database_password: ST1.f,bK(9m6
+    database_password: AmEsadS173
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
