--- a/app/config/parameters_prod.yml
+++ b/app/config/parameters_prod.yml
@@ -11,4 +11,4 @@ parameters:
     mailer_user: null
     mailer_password: null
     locale: de
-    secret: ThisTokenIsNotSoSecretChangeIt
+    secret: +!ThisTokenIsSecret$%
